zakat-calculator.html

--- a/zakat-calculator.html
+++ b/zakat-calculator.html
@@ -29,7 +29,7 @@
             <li><a href="about.html">About</a></li>
         </ul>
         <div class="color-toggle">
-            <button id="colorToggle">Toggle Color Mode</button>
+             <button id="colorToggle">Color Blind Mode</button>
         </div>
     </nav>
 
